# mytest-projects

./: .gitignore  README.md
EpollUtil/: CMakeLists.txt  main.cpp
EpollUtil/src/: epoll_socket.cpp  epoll_socket.h
aes-and-base64-use-openssl/: CMakeLists.txt  main.c
base64/: CMakeLists.txt
curlUseC/: CMakeLists.txt  main.c
ffmpegSimplePlayer/: 02-simple-player.pro  main.cpp
ffmpegSimplePlayer/ffmpeg-purse-mp4/: ffmpeg_purse_mp4.c
ffmpegtest/: CMakeLists.txt  demuxer.cpp  main.cpp
ffmpegtest/src/ffmpeg/libs/: libavfilter.so.7  libavutil.so.56.22.100  libswscale.so.5
gtk-thread/: CMakeLists.txt  main.c
icmp-arp-udp-protocol/: icmp_arp_udp.c
json-cpp/: CMakeLists.txt  main.cpp
json-glib/: CMakeLists.txt
json-glib-demo/: main.c
libevent/: CMakeLists.txt  main.cpp
libevent/libs/: libevent-2.1.so.6.0.2  libevent_core-2.1.so.6.0.2  libevent_extra-2.1.so.6.0.2  libevent_openssl-2.1.so.6.0.2  libevent_pthreads-2.1.so.6.0.2
libevent/src/: tcpserverdemo.cpp  timerdemo.cpp
libqueue/: main.cpp
libusb-test/: test-libusb2.c
log4c-test/: CMakeLists.txt  log4crc  main.c
log4c-test/src/: log.c  log.h
log4cppDemo/: CMakeLists.txt  log4cpp.property  main.cpp
simpleFactoryPattern/: CMakeLists.txt  main.cpp
simpleFactoryPattern/src/: operationFactory.cpp  operationFactory.h
smartPtr/: CMakeLists.txt  main.cpp
smartPtr/src/: smartPtr.cpp  smartPtr.h
socketGetLocalIp/: get_local_ip.c
testGObject/: CMakeLists.txt  main.c
testGObject/src/: header.h  spice-obj.c  spice-obj.h  vcd-msg-box.c  vcd-msg-box.h
testGlibConfig/: CMakeLists.txt  main.c
testGlibConfig/src/: setting  testGlibConfig.c  testGlibConfig.h
testHttpServer/: CMakeLists.txt
testThreadPool/: CMakeLists.txt  main.c
testThreadPool/extraThreadPoolDemoUseC/: ThreadPool.c
testThreadPool/src/: a.out  condition.c  condition.h  main.c  threadpool.c  threadpool.h
testZeroMQ/clientDir/: a.out  file_sender.cpp
testZeroMQ/serverDir/: a.out  file_server.cpp  zmq.hpp
testZeroMQ/simpleDemo/: simpleClient.c  simpleServer.c
testcommandline/: main.cpp
threadpool/: CMakeLists.txt  main.cpp
